# docs/swagger.json
@@ -17,6 +17,46 @@
     "host": "ws-irgi2024-8b615be21b10.herokuapp.com",
     "basePath": "/",
     "paths": {
+        "/ins": {
+            "post": {
+                "description": "Input data presensi.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Presensi"
+                ],
+                "summary": "Insert data presensi.",
+                "parameters": [
+                    {
+                        "description": "Payload Body [RAW]",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.Presensi"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Presensi"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/presensi": {
             "get": {
                 "description": "Mengambil semua data presensi.",
@@ -87,28 +127,43 @@
             "type": "object",
             "properties": {
                 "durasi": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 8
                 },
                 "gmt": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 7
                 },
                 "hari": {
                     "type": "array",
                     "items": {
                         "type": "string"
-                    }
+                    },
+                    "example": [
+                        "Senin",
+                        "Selasa",
+                        "Rabu",
+                        "Kamis",
+                        "Jumat",
+                        "Sabtu",
+                        "Minggu"
+                    ]
                 },
                 "jam_keluar": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "16:00"
                 },
                 "jam_masuk": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "08:00"
                 },
                 "piket_tim": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Piket Z"
                 },
                 "shift": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 2
                 }
             }
         },
@@ -116,16 +171,27 @@
             "type": "object",
             "properties": {
                 "_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "123456789"
                 },
                 "hari_kerja": {
                     "type": "array",
                     "items": {
                         "type": "string"
-                    }
+                    },
+                    "example": [
+                        "Senin",
+                        "Selasa",
+                        "Rabu",
+                        "Kamis",
+                        "Jumat",
+                        "Sabtu",
+                        "Minggu"
+                    ]
                 },
                 "jabatan": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Anonymous"
                 },
                 "jam_kerja": {
                     "type": "array",
@@ -134,10 +200,12 @@
                     }
                 },
                 "nama": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Tes Swagger"
                 },
                 "phone_number": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "08123456789"
                 }
             }
         },
@@ -145,28 +213,36 @@
             "type": "object",
             "properties": {
                 "_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "123456789"
                 },
                 "biodata": {
                     "$ref": "#/definitions/controller.Karyawan"
                 },
                 "checkin": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Masuk"
                 },
                 "datetime": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2024-09-01T00:00:00Z"
                 },
                 "latitude": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 123.12
                 },
                 "location": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Bandung"
                 },
                 "longitude": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 123.11
                 },
                 "phone_number": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "08123456789"
                 }
             }
         }
